--- a/scss/components/_color.scss
+++ b/scss/components/_color.scss
@@ -12,14 +12,46 @@
 
     &__list {
         display: flex;
-        gap: 80px;
+        justify-content: space-between;
+        text-align: center;
     }
 
-    &__item {
-        flex-basis: calc((100% - 240px)/4);
-    }
+
 
     &__img {
         margin-bottom: 20px;
+    }
+
+    @media screen and (width < 1050px) {
+
+        &__list {
+            flex-wrap: wrap;
+            text-align: -webkit-center;
+
+        }
+
+        &__item,
+        &__title,
+        &__text {
+            width: 50%;
+        }
+
+        &__item {
+            margin: 0 auto 30px;
+        }
+    }
+
+    @media screen and (width < 768px) {
+        padding-bottom: 50px;
+    }
+
+    @media screen and (width < 560px) {
+        &__item {
+            width: 100%;
+        }
+
+        &__img {
+            width: 100%;
+        }
     }
 }
