--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -24,4 +24,27 @@
         border-radius: 30px;
         color: #ffffff;
     }
+
+    @media screen and (width < 1200px) {
+        &__img {
+            width: 100%;
+        }
+    }
+
+    @media screen and (width < 768px) {
+        padding: 50px 0 30px;
+    }
+
+    @media screen and (width < 560px) {
+        &__title {
+            font-size: 34px;
+            line-height: calc(42/34);
+        }
+
+        &__btn {
+            padding: 16px 90px;
+            font-size: 18px;
+            line-height: calc(22/18);
+        }
+    }
 }
