--- a/scss/components/_new.scss
+++ b/scss/components/_new.scss
@@ -19,6 +19,22 @@
         color: var(--black);
     }
 
+    @media screen and (width < 940px) {
+        padding: 50px 0;
+    
+        &__img {
+            display: none;
+        }
+
+        &__text,
+        & b {
+            max-width: 100%;
+        }
+    }
+    @media screen and (width < 768px) {
+        padding: 50px 0 50px;
+    }
+
 
 }
 
@@ -30,4 +46,10 @@
     text-align: center;
     text-transform: uppercase;
     color: var(--gray);
+
+    @media screen and (width < 940px) {
+    margin-bottom: 20px;
+    font-size: 28px;
+    line-height: calc(32/28);
+    }
 }
