--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -10,6 +10,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media screen and (width < 420px) {
+        flex-wrap: wrap
+    }
+
+    ;
 }
 
 .menu {
@@ -18,13 +24,109 @@
     flex-grow: 1;
     flex-basis: 0;
 
+    &__btn {
+        display: none;
+    }
+
     &__link {
         color: inherit;
     }
+
+    @media screen and (width < 940px) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: var(--black);
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 50px;
+        transform: translateY(-100%);
+        transition: .3s ease;
+
+        &__btn {
+            position: relative;
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            background: transparent;
+            order: 1;
+            border: none;
+            padding: 0;
+            z-index: 2;
+
+            &-line {
+                position: absolute;
+                left: 0;
+                width: 80%;
+                height: 2px;
+                background: var(--gray);
+                transition: .3s ease;
+
+                &:nth-child(1) {
+                    top: 5px;
+                }
+
+                &:nth-child(2) {
+                    top: 20px;
+                }
+
+                &:nth-child(3) {
+                    top: 20px;
+                }
+
+                &:nth-child(4) {
+                    top: 35px;
+                }
+            }
+
+        }
+
+        &-open &__btn-line:nth-child(1) {
+            transform: scaleX(0);
+        }
+
+        &-open &__btn-line:nth-child(2) {
+            transform: rotate(45deg);
+        }
+
+        &-open &__btn-line:nth-child(3) {
+            transform: rotate(-45deg);
+        }
+
+        &-open &__btn-line:nth-child(4) {
+            transform: scaleX(0);
+        }
+
+        &-open .menu {
+            transform: translateY(0%);
+        }
+        &__link {
+            font-size: 56px;
+        }
+    }
+
+    
+
+    @media screen and (width < 420px) {
+        &__link {
+            font-size: 32px;
+        }
+
+    }
 }
 
+
 .logo {
-    margin: 0 auto;
+    // margin: 0 auto;
+
+    @media screen and (width < 940px) {
+        position: relative;
+        z-index: 2;
+        margin: 0;
+    }
 }
 
 .phone {
@@ -35,4 +137,17 @@
     color: currentColor;
     flex-grow: 1;
     flex-basis: 0;
+
+    @media screen and (width < 940px) {
+        position: relative;
+        z-index: 2;
+        text-align: center;
+    }
+
+    @media screen and (width < 420px) {
+        flex-basis: auto;
+        width: 100%;
+        margin-top: 50px;
+        order: 3;
+    }
 }
