--- a/scss/style.css
+++ b/scss/style.css
@@ -3,6 +3,7 @@
   --black: #0A0A0A;
   --background-header: #F5F5F7;
   --gray: #717171;
+  --accent: #490E84;
 }
 
 .container {
@@ -115,6 +116,10 @@ button {
 }
 .menu__link {
   color: inherit;
+  transition: 0.3s ease;
+}
+.menu__link:hover {
+  color: var(--accent);
 }
 @media screen and (width < 940px) {
   .menu {
@@ -141,6 +146,10 @@ button {
     border: none;
     padding: 0;
     z-index: 2;
+    transition: 0.3s ease;
+  }
+  .menu__btn:hover .menu__btn-line {
+    background: var(--accent);
   }
   .menu__btn-line {
     position: absolute;
@@ -203,6 +212,10 @@ button {
   color: currentColor;
   flex-grow: 1;
   flex-basis: 0;
+  transition: 0.3s ease;
+}
+.phone:hover {
+  color: var(--accent);
 }
 @media screen and (width < 940px) {
   .phone {
@@ -243,6 +256,13 @@ button {
   background: #490E84;
   border-radius: 30px;
   color: #ffffff;
+  border: 1px solid var(--accent);
+  transition: 0.3s ease;
+}
+.hero__btn:hover {
+  color: var(--accent);
+  background: #fff;
+  border: 1px solid var(--accent);
 }
 @media screen and (width < 1200px) {
   .hero__img {
@@ -335,6 +355,10 @@ button {
 }
 .color__img {
   margin-bottom: 20px;
+  transition: 0.3s ease;
+}
+.color__img:hover {
+  transform: scaleX(1.2);
 }
 @media screen and (width < 1050px) {
   .color__list {
@@ -432,6 +456,12 @@ button {
   border-radius: 30px;
   color: #490e84;
   border: transparent;
+  transition: 0.3s ease;
+}
+.contacts__btn:hover {
+  color: #fff;
+  background: #574B63;
+  border: 1px solid #FFFFFF;
 }
 @media screen and (width < 1200px) {
   .contacts {
@@ -481,6 +511,10 @@ button {
 .footer__link {
   flex-basis: 0;
   flex-grow: 1;
+  transition: 0.3s ease;
+}
+.footer__link:hover {
+  color: var(--accent);
 }
 @media screen and (width < 640px) {
   .footer {
